tests/analyzer/errors/assign_to_method.rv
struct Foo {
    fn f(self, a: int) { print a }
}

fn main() {
    var foo = Foo {}

    fn f2(this: Foo, a: int) {
        print 2 * a
    }

    foo.f = f2
}

